--- a/Practica_Prioridades/Practica_Prioridades/Components/Pages/Home.razor
+++ b/Practica_Prioridades/Practica_Prioridades/Components/Pages/Home.razor
@@ -2,6 +2,6 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Isaac Patricio Coste Burgos (2021-0534)</h1>
 
-Welcome to your new app.
+<h4>Este es mi primer formulario.</h4>
