--- a/Practica_Prioridades/Practica_Prioridades/Components/_Imports.razor
+++ b/Practica_Prioridades/Practica_Prioridades/Components/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using Practica_Prioridades
 @using Practica_Prioridades.Components
+@using Practica_Prioridades.BLL
+@using Practica_Prioridades.Models
