--- a/Practica_Prioridades/Practica_Prioridades/Components/Layout/NavMenu.razor
+++ b/Practica_Prioridades/Practica_Prioridades/Components/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">Registro Prioridades</a>
+        <a class="navbar-brand" href="">Registros</a>
     </div>
 </div>
 
@@ -17,6 +17,12 @@
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="R_Prioridades">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Registro Prioridades
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="RClientes">
+                <span class="bi bi-file-earmark-person" aria-hidden="true"></span> Registro Clientes
+                
             </NavLink>
         </div>
     </nav>
