--- a/Practica_Prioridades/Practica_Prioridades/Components/Layout/NavMenu.razor
+++ b/Practica_Prioridades/Practica_Prioridades/Components/Layout/NavMenu.razor
@@ -21,8 +21,12 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="RClientes">
-                <span class="bi bi-file-earmark-person" aria-hidden="true"></span> Registro Clientes
-                
+                <span class="bi bi-file-earmark-person align-items-center d-flex justify-content-center" style="font-size: 1.5em;" aria-hidden="true"></span> Registro Clientes
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="C_Clientes">
+                <span class="bi bi-clipboard2-check align-items-center d-flex justify-content-center" style="font-size: 1.5em;" aria-hidden="true"></span> Registro Clientes
             </NavLink>
         </div>
     </nav>
