Agrega al imputnumber que se pueda recorrer a numeros negativos

--- a/Practica_Prioridades/Practica_Prioridades/Components/Layout/NavMenu.razor
+++ b/Practica_Prioridades/Practica_Prioridades/Components/Layout/NavMenu.razor
@@ -15,7 +15,7 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="R_Prioridades">
+            <NavLink class="nav-link" href="RPrioridades">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Registro Prioridades
             </NavLink>
         </div>
@@ -25,7 +25,7 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="C_Clientes">
+            <NavLink class="nav-link" href="CClientes">
                 <span class="bi bi-clipboard2-check align-items-center d-flex justify-content-center" style="font-size: 1.5em;" aria-hidden="true"></span> Registro Clientes
             </NavLink>
         </div>
