--- a/Practica_Prioridades/Practica_Prioridades/Components/Pages/R_Prioridades.razor
+++ b/Practica_Prioridades/Practica_Prioridades/Components/Pages/R_Prioridades.razor
@@ -1,7 +1,5 @@
-﻿@page "/R_Prioridades"
-@page "/R_Prioridades/{PrioridadId:int}"
-@using Practica_Prioridades.BLL
-@using Practica_Prioridades.Models
+﻿@page "/RPrioridades"
+@page "/RPrioridades/{PrioridadId:int}"
 @inject PrioridadesBLL prioridadesBLL
 @rendermode InteractiveServer
 
@@ -16,7 +14,7 @@
         <div class="card-body">
             <label>ID:</label>
             <div class="input-group">
-                <InputNumber @bind-Value="prioridades.PrioridadId" class="id-input"></InputNumber>
+                <InputNumber min="0" @bind-Value="prioridades.PrioridadId" class="id-input"></InputNumber>
                 <button type="button" class="btn btn-primary bi bi-search" @onclick="Buscar"></button>
             </div>
             <div>
