Agrege tilde a las palabras que le hacia falta con &acute;

--- a/Practica_Prioridades/Practica_Prioridades/Components/Pages/C_Clientes.razor
+++ b/Practica_Prioridades/Practica_Prioridades/Components/Pages/C_Clientes.razor
@@ -9,7 +9,7 @@
             <tr>
                 <th>Id</th>
                 <th>Nombre</th>
-                <th>Telefono</th>
+                <th>Tel&eacute;fono</th>
                 <th>Celular</th>
                 <th>Rnc</th>
                 <th>Email</th>
