--- a/Practica_Prioridades/Practica_Prioridades/Components/Pages/R_Clientes.razor
+++ b/Practica_Prioridades/Practica_Prioridades/Components/Pages/R_Clientes.razor
@@ -28,7 +28,7 @@
                 }
             </div>
             <div class="col-6">
-                <label>Telefono:</label>
+                <label>Tel&eacute;fono:</label>
                 <InputText @bind-Value="clientes.Telefono" class="form-control"></InputText>
                 <ValidationMessage For="@(() => clientes.Telefono)" />
             </div>
@@ -52,7 +52,7 @@
                 <ValidationMessage For="@(() => clientes.Email)" />
             </div>
             <div class="col-6">
-                <label>Direccion:</label>
+                <label>Direcci&oacute;n:</label>
                 <InputText @bind-Value="clientes.Direccion" class="form-control"></InputText>
                 <ValidationMessage For="@(() => clientes.Direccion)" />
             </div>
