Modifique el cliente para convertirlo en el index

--- a/Practica_Prioridades/Practica_Prioridades/Components/Pages/Home.razor
+++ b/Practica_Prioridades/Practica_Prioridades/Components/Pages/Home.razor
@@ -2,6 +2,6 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Isaac Patricio Coste Burgos (2021-0534)</h1>
+<h1>Laboratorio de programaci&oacute;n aplicada</h1>
 
-<h4>Este son mis registros.</h4>
+<h4>Isaac Patricio Coste Burgos (2021-0534)</h4>
