--- a/Practica_Prioridades/Practica_Prioridades/Components/Layout/NavMenu.razor
+++ b/Practica_Prioridades/Practica_Prioridades/Components/Layout/NavMenu.razor
@@ -14,19 +14,16 @@
             </NavLink>
         </div>
 
+        
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="RPrioridades">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Registro Prioridades
+            <NavLink class="nav-link" href="CPrioridades">
+                <span class="bi bi-clipboard2-check align-items-center d-flex justify-content-center" style="font-size: 1.5em;" aria-hidden="true"></span> Prioridades
             </NavLink>
         </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="RClientes">
-                <span class="bi bi-file-earmark-person align-items-center d-flex justify-content-center" style="font-size: 1.5em;" aria-hidden="true"></span> Registro Clientes
-            </NavLink>
-        </div>
+        
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="CClientes">
-                <span class="bi bi-clipboard2-check align-items-center d-flex justify-content-center" style="font-size: 1.5em;" aria-hidden="true"></span> Registro Clientes
+                <span class="bi bi-clipboard2-check align-items-center d-flex justify-content-center" style="font-size: 1.5em;" aria-hidden="true"></span>  Clientes
             </NavLink>
         </div>
     </nav>
