--- a/Practica_Prioridades/Practica_Prioridades/Components/Layout/NavMenu.razor
+++ b/Practica_Prioridades/Practica_Prioridades/Components/Layout/NavMenu.razor
@@ -26,5 +26,10 @@
                 <span class="bi bi-clipboard2-check align-items-center d-flex justify-content-center" style="font-size: 1.5em;" aria-hidden="true"></span>  Clientes
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="IndexSistem">
+                <span class="bi bi-clipboard2-check align-items-center d-flex justify-content-center" style="font-size: 1.5em;" aria-hidden="true"></span>  Sistemas
+            </NavLink>
+        </div>
     </nav>
 </div>
