--- a/Practica_Prioridades/Practica_Prioridades/Components/Pages/ClientesPages/Create.razor
+++ b/Practica_Prioridades/Practica_Prioridades/Components/Pages/ClientesPages/Create.razor
@@ -101,10 +101,6 @@
 
             return HayNombre || HayRnc;
         }
-        public void Nuevo()
-        {
-            clientes = new Clientes();
-        }
         public async void Guardar()
         {
             if (await Validar())
@@ -114,17 +110,8 @@
             var guardo = await clientesService.Guardar(clientes);
             if(guardo)
             {
-            Nuevo();
             Notification = "Se Guardo los datos correctamente";
-            }
-            
-        }
-        public async void Eliminar()
-        {
-            if (clientes.ClienteId > 0)
-            {
-            await clientesService.Eliminar(clientes);
-                Nuevo();
+            Volver();
             }
         }
         public void Volver(){
