--- a/Practica_Prioridades/Practica_Prioridades/Components/Pages/ClientesPages/Delete.razor
+++ b/Practica_Prioridades/Practica_Prioridades/Components/Pages/ClientesPages/Delete.razor
@@ -8,7 +8,7 @@
 
 <div class="card">
     <div class="card-header">
-        <h1>Desea Eliminar Este Cliente!</h1>
+        <h1>Desea Eliminar Este Cliente?</h1>
     </div>
     <div class="card-body">
         <h5 class="card-title">Detalles de Cliente</h5>
@@ -42,7 +42,6 @@
 
     </div>
 </div>
-
 
 @code {
     [Parameter]
