Modifique el menú para agregar los enlaces a lo nuevo que agregue

--- a/Practica_Prioridades/Practica_Prioridades/Components/Layout/NavMenu.razor
+++ b/Practica_Prioridades/Practica_Prioridades/Components/Layout/NavMenu.razor
@@ -17,18 +17,23 @@
         
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="CPrioridades">
-                <span class="bi bi-clipboard2-check align-items-center d-flex justify-content-center" style="font-size: 1.5em;" aria-hidden="true"></span> Prioridades
+                <span class="bi bi-bar-chart-steps align-items-center d-flex justify-content-center" style="font-size: 1.5em;" aria-hidden="true"></span> Prioridades
             </NavLink>
         </div>
         
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="CClientes">
-                <span class="bi bi-clipboard2-check align-items-center d-flex justify-content-center" style="font-size: 1.5em;" aria-hidden="true"></span>  Clientes
+                <span class="bi bi-person-rolodex align-items-center d-flex justify-content-center" style="font-size: 1.5em;" aria-hidden="true"></span>  Clientes
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="IndexSistem">
-                <span class="bi bi-clipboard2-check align-items-center d-flex justify-content-center" style="font-size: 1.5em;" aria-hidden="true"></span>  Sistemas
+                <span class="bi bi-pc align-items-center d-flex justify-content-center" style="font-size: 1.5em;" aria-hidden="true"></span>  Sistemas
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="IndexTickets">
+                <span class="bi bi-ticket-perforated-fill align-items-center d-flex justify-content-center" style="font-size: 1.5em;" aria-hidden="true"></span>  Tickets
             </NavLink>
         </div>
     </nav>
