--- a/Practica_Prioridades/Practica_Prioridades/Components/Pages/ClientesPages/Create.razor
+++ b/Practica_Prioridades/Practica_Prioridades/Components/Pages/ClientesPages/Create.razor
@@ -60,7 +60,7 @@
         </div>
         <div class=" card-footer text-center">
             <button type="submit" class="btn btn-success">Crear <i class="bi bi-floppy-fill" /></button>
-            <button type="button" class="btn btn-outline-primary" @onclick="Volver">Volver <i class="bi bi-arrow-return-left" /></button>
+            <button type="button" class="btn btn-outline-primary" @onclick="Volver" >Volver <i class="bi bi-arrow-return-left" /></button>
         </div>
     </div>
 </EditForm>
@@ -73,7 +73,6 @@
         private bool HayRnc = false;
         public string Notification { get; set; } = string.Empty;
 
-
         protected override void OnInitialized()
         {
             if (ClienteId > 0)
@@ -85,7 +84,6 @@
         public async void Buscar()
         {
             var clienteEncontrado = await clientesService.Buscar(clientes.ClienteId);
-
             if (clienteEncontrado != null)
             {
                 this.clientes = clienteEncontrado;
@@ -93,10 +91,14 @@
         }
         public async Task<bool> Validar()
         {
-            var listaClientes = await clientesService.Listar(t => t.Nombre!.ToLower() == clientes.Nombre!.ToLower() && t.ClienteId != clientes.ClienteId);
+            var listaClientes = await clientesService.
+            Listar(t => t.Nombre!.ToLower() == clientes.Nombre!.
+            ToLower() && t.ClienteId != clientes.ClienteId);
             HayNombre = listaClientes.Any();
 
-            var listaClientesRnc = await clientesService.Listar(t => t.Rnc!.ToLower() == clientes.Rnc!.ToLower() && t.ClienteId != clientes.ClienteId);
+            var listaClientesRnc = await clientesService.
+            Listar(t => t.Rnc!.ToLower() == clientes.Rnc!.
+            ToLower() && t.ClienteId != clientes.ClienteId);
             HayRnc = listaClientesRnc.Any();
 
             return HayNombre || HayRnc;
