--- a/Practica_Prioridades/Practica_Prioridades/Components/Pages/ClientesPages/Delete.razor
+++ b/Practica_Prioridades/Practica_Prioridades/Components/Pages/ClientesPages/Delete.razor
@@ -37,7 +37,7 @@
         </dl>
     </div>
     <div class="card-footer text-lg-center">
-        <button type="button" class="btn btn-danger" @onclick="Eliminar">Eliminar</button>
+        <button type="button" class="btn btn-danger" @onclick="Eliminar">Eliminar <i class="bi bi-trash3" /></button>
         <button type="button" class="btn btn-outline-primary" @onclick="Volver ">Volver <i class="bi bi-arrow-return-left" /></button>
 
     </div>
